0.8.0 Bertrand Janin <b@janin.com> (..........)

	* Add overwrite of the temporary plain text file (shred-style).
	* Override internal structures to avoid plain text to linger in RAM.
	* Use explicit_bzero(3) instead of bzero(3).

0.7.4 Bertrand Janin <b@janin.com> (2015-04-18)

	* Fix the misdetection of file changes, using CRC32 instead of
	  (size + sum) comparison (fixes issue #5, found by @fluxspir).

0.7.3 Bertrand Janin <b@janin.com> (2014-02-11)

	* Fix crash on 'mdp edit' if neither $EDITOR or 'set editor' is
	  defined.

0.7.2 Bertrand Janin <b@janin.com> (2014-02-09)

	* Fix double-free() crash when using 'mdp add' without prefix (found
	  by Vlad Glagolev (stealth@sourcemage.org>).

0.7.1 Bertrand Janin <b@janin.com> (2014-02-08)

	* Make charset convertion errors a little easier to spot.
	* Warn if the current locale is not supported by the system.

0.7.0 Bertrand Janin <b@janin.com> (2014-02-07)

	* Switch to git-style command line with a command (e.g. mdp edit).
	* New 'add' command to avoid copy-pastes on creation.
	* Passwords can now use character sets containing unicode.
	* Add aliases to common character_sets (e.g. $ALPHANUMERIC, $DIGITS).
	* Allow user to set password_file in the config.
	* Detect vim and add '-n' to avoid swap file creation.
	* Add '-E' option to 'prompt' mode (regex).
	* Define a comment character for the password file (#).
	* Renamed query-mode to the prompt command.
	* Fix a bug where mdp would not detect a bad directory permission.
	* Fix crash when the user does not have an EDITOR env var.

0.6.0 Bertrand Janin <b@janin.com> (2014-01-10)

	* Add configurable profiles (-p) to the password generator (-g).
	* Fix pager display bug on long lines.
	* Fix a bug with mdp unable to properly detect a SIGINT sent to gpg.
	* Make gpg_key_id mandatory.
	* Add -l parameter to force the length of passwords.
	* Add -n parameter to force the number of passwords.
	* Add -k parameter to define the GnuPG key if missing from config.