@@ -1,6 +1,6 @@
 FOR 0.8
  - wipe the allocated structures after use (memset) and make sure optimization
-   does not remove these memsets (copy explicit_bzero from openbsd).
+   does not remove these memsets
  - find out if there is a way to override the ncurses internal representation
  - test the wiping of the tmp file by mounting .mdp to a small partition that
    could be analyzed.
