@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013-2014 Bertrand Janin <b@janin.com>
+ * Copyright (c) 2013-2015 Bertrand Janin <b@janin.com>
  *
  * Permission to use, copy, modify, and distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
@@ -19,6 +19,7 @@
 
 void cleanup_tmp_path(void);
 void cleanup(void);
+void startup_cleanup(char *);
 void atexit_cleanup(void);
 void sig_cleanup(int);
 
